--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css">
 
-  <title>React App</title>
+  <title>SII - Leaflet Map</title>
 </head>
 
 <body>
